; ModuleID = '/home/carl/AnghaBench/mpv/sub/extr_osd_libass.c_update_osd_text.c'
source_filename = "/home/carl/AnghaBench/mpv/sub/extr_osd_libass.c_update_osd_text.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.osd_state = type { i32 }
%struct.osd_object = type { i32*, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@.str = private unnamed_addr constant [4 x i8] c"OSD\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.osd_state*, %struct.osd_object*)* @update_osd_text to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @update_osd_text(%struct.osd_state* %0, %struct.osd_object* %1) #0 {
  %3 = alloca %struct.osd_state*, align 8
  %4 = alloca %struct.osd_object*, align 8
  store %struct.osd_state* %0, %struct.osd_state** %3, align 8
  store %struct.osd_object* %1, %struct.osd_object** %4, align 8
  %5 = load %struct.osd_object*, %struct.osd_object** %4, align 8
  %6 = getelementptr inbounds %struct.osd_object, %struct.osd_object* %5, i32 0, i32 0
  %7 = load i32*, i32** %6, align 8
  %8 = getelementptr inbounds i32, i32* %7, i64 0
  %9 = load i32, i32* %8, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %12, label %11

11:                                               ; preds = %2
  br label %24

12:                                               ; preds = %2
  %13 = load %struct.osd_state*, %struct.osd_state** %3, align 8
  %14 = load %struct.osd_object*, %struct.osd_object** %4, align 8
  %15 = call i32 @prepare_osd_ass(%struct.osd_state* %13, %struct.osd_object* %14)
  %16 = load %struct.osd_object*, %struct.osd_object** %4, align 8
  %17 = getelementptr inbounds %struct.osd_object, %struct.osd_object* %16, i32 0, i32 1
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 8
  %20 = load %struct.osd_object*, %struct.osd_object** %4, align 8
  %21 = getelementptr inbounds %struct.osd_object, %struct.osd_object* %20, i32 0, i32 0
  %22 = load i32*, i32** %21, align 8
  %23 = call i32 @add_osd_ass_event_escaped(i32 %19, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i32* %22)
  br label %24

24:                                               ; preds = %12, %11
  ret void
}

declare dso_local i32 @prepare_osd_ass(%struct.osd_state*, %struct.osd_object*) #1

declare dso_local i32 @add_osd_ass_event_escaped(i32, i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
